{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 53,
  "lineage": "bf1ad9b5-4345-5f1b-4940-7d60fd4540df",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:loadbalancer/app/contoso/131f79e1a4fb780b",
            "arn_suffix": "app/contoso/131f79e1a4fb780b",
            "dns_name": "contoso-1708905007.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:loadbalancer/app/contoso/131f79e1a4fb780b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "contoso",
            "security_groups": [
              "sg-0d1798cac308c5dfd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0981f02312f33c4a9"
              },
              {
                "subnet_id": "subnet-0c0ab4f95c07931f5"
              },
              {
                "subnet_id": "subnet-0d5dc5af2274c4804"
              }
            ],
            "subnets": [
              "subnet-0981f02312f33c4a9",
              "subnet-0c0ab4f95c07931f5",
              "subnet-0d5dc5af2274c4804"
            ],
            "tags": {
              "Customer": "Network",
              "Email": "maher.mfayez@gmail.com",
              "Environment": "ci-cd",
              "GithubRepo": "https://github.com/xxx/",
              "Name": "Network",
              "Owner": "Maher Fayez",
              "Product": "Network",
              "Project": "POC"
            },
            "vpc_id": "vpc-05de58a4b4639a421",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.ALB.aws_security_group.lb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:listener/app/contoso/131f79e1a4fb780b/a7c9a88f76c0fef6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:targetgroup/contoso/a4d3c1823ca7348e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:listener/app/contoso/131f79e1a4fb780b/a7c9a88f76c0fef6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:loadbalancer/app/contoso/131f79e1a4fb780b",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_alb.main",
            "module.ALB.aws_alb_target_group.app",
            "module.ALB.aws_security_group.lb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:targetgroup/contoso/a4d3c1823ca7348e",
            "arn_suffix": "targetgroup/contoso/a4d3c1823ca7348e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/ping.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:669791164395:targetgroup/contoso/a4d3c1823ca7348e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "contoso",
            "port": 81,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:security-group/sg-0d1798cac308c5dfd",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1798cac308c5dfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "contoso",
            "name_prefix": "",
            "owner_id": "669791164395",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:security-group/sg-0c4df43c93beaecd8",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4df43c93beaecd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d1798cac308c5dfd"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "app",
            "name_prefix": "",
            "owner_id": "669791164395",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_security_group.lb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03fdd1d7946481d63",
            "domain": "vpc",
            "id": "eipalloc-0855fda007fdbf044",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02455d23b275885fe",
            "private_dns": "ip-172-17-3-33.eu-west-2.compute.internal",
            "private_ip": "172.17.3.33",
            "public_dns": "ec2-18-135-197-57.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.197.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a325b886984badbf",
            "domain": "vpc",
            "id": "eipalloc-069ac6eae02c2a48f",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0df076e2746acc38a",
            "private_dns": "ip-172-17-4-21.eu-west-2.compute.internal",
            "private_ip": "172.17.4.21",
            "public_dns": "ec2-18-135-34-213.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.34.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d2f9f0867d30bdf3",
            "domain": "vpc",
            "id": "eipalloc-09128b4681f149bef",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f16c10de551cf5de",
            "private_dns": "ip-172-17-5-216.eu-west-2.compute.internal",
            "private_ip": "172.17.5.216",
            "public_dns": "ec2-3-11-214-92.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.214.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:internet-gateway/igw-0baac89765f0e12d3",
            "id": "igw-0baac89765f0e12d3",
            "owner_id": "669791164395",
            "tags": {
              "Customer": "Network",
              "Email": "maher.mfayez@gmail.com",
              "Environment": "ci-cd",
              "GithubRepo": "https://github.com/xxx/",
              "Name": "Network",
              "Owner": "Maher Fayez",
              "Product": "Network",
              "Project": "POC"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0855fda007fdbf044",
            "id": "nat-0e91130da09a8f14a",
            "network_interface_id": "eni-02455d23b275885fe",
            "private_ip": "172.17.3.33",
            "public_ip": "18.135.197.57",
            "subnet_id": "subnet-0981f02312f33c4a9"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069ac6eae02c2a48f",
            "id": "nat-079432d9a297879c1",
            "network_interface_id": "eni-0df076e2746acc38a",
            "private_ip": "172.17.4.21",
            "public_ip": "18.135.34.213",
            "subnet_id": "subnet-0c0ab4f95c07931f5"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09128b4681f149bef",
            "id": "nat-0641c481d553ec6eb",
            "network_interface_id": "eni-0f16c10de551cf5de",
            "private_ip": "172.17.5.216",
            "public_ip": "3.11.214.92",
            "subnet_id": "subnet-0d5dc5af2274c4804"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0baac89765f0e12d3",
            "id": "r-rtb-005c81b0b5b8cb6961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005c81b0b5b8cb696",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-025a7fb4cc58fe49a",
            "owner_id": "669791164395",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e91130da09a8f14a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-016dca5b0db83f96c",
            "owner_id": "669791164395",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079432d9a297879c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c1736d3e340e0b6",
            "owner_id": "669791164395",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0641c481d553ec6eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b90dd09ab90997",
            "route_table_id": "rtb-025a7fb4cc58fe49a",
            "subnet_id": "subnet-018e6fa377ebe8b5a"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe4d06b85beda82",
            "route_table_id": "rtb-016dca5b0db83f96c",
            "subnet_id": "subnet-0cdbe82761e111b95"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bbddbc9163ea59b",
            "route_table_id": "rtb-03c1736d3e340e0b6",
            "subnet_id": "subnet-025ac23564d3758fc"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-018e6fa377ebe8b5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-018e6fa377ebe8b5a",
            "map_public_ip_on_launch": false,
            "owner_id": "669791164395",
            "tags": {
              "Name": "private-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-0cdbe82761e111b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0cdbe82761e111b95",
            "map_public_ip_on_launch": false,
            "owner_id": "669791164395",
            "tags": {
              "Name": "private-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-025ac23564d3758fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-025ac23564d3758fc",
            "map_public_ip_on_launch": false,
            "owner_id": "669791164395",
            "tags": {
              "Name": "private-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-0981f02312f33c4a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0981f02312f33c4a9",
            "map_public_ip_on_launch": true,
            "owner_id": "669791164395",
            "tags": {
              "Name": "public-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-0c0ab4f95c07931f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.17.4.0/24",
            "id": "subnet-0c0ab4f95c07931f5",
            "map_public_ip_on_launch": true,
            "owner_id": "669791164395",
            "tags": {
              "Name": "public-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:subnet/subnet-0d5dc5af2274c4804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.17.5.0/24",
            "id": "subnet-0d5dc5af2274c4804",
            "map_public_ip_on_launch": true,
            "owner_id": "669791164395",
            "tags": {
              "Name": "public-$data.aws_availability_zones.available.names[count.index]"
            },
            "vpc_id": "vpc-05de58a4b4639a421"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:669791164395:vpc/vpc-05de58a4b4639a421",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0bfa04785d9a3142c",
            "default_route_table_id": "rtb-005c81b0b5b8cb696",
            "default_security_group_id": "sg-034f1f87988ded02e",
            "dhcp_options_id": "dopt-0899c961",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05de58a4b4639a421",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-005c81b0b5b8cb696",
            "owner_id": "669791164395",
            "tags": {
              "Customer": "Network",
              "Email": "maher.mfayez@gmail.com",
              "Environment": "ci-cd",
              "GithubRepo": "https://github.com/xxx/",
              "Name": "Network",
              "Owner": "Maher Fayez",
              "Product": "Network",
              "Project": "POC"
            }
          }
        }
      ]
    }
  ]
}